# NewVLA

./: .env  .env.example  .gitignore  AGENTS.md  BugList.md  ENV-OLD-TO-NEW.md  NiceToHave.md  ThirdParty.md
.cursor/rules/: agentaction.mdc  anti-venv.mdc  antioverdesign.mdc  caveman.mdc  debug.mdc  design.mdc  docedit.mdc  env.mdc  mutifolder.mdc  nice-to-have.mdc  plan-landed-renew-agents-rules.mdc  ps.mdc  renew-prompts.mdc  workplacestructure.mdc  worktree.mdc
.trae/rules/: agentaction.md  antioverdesign.md  design.md  docedit.md  env.md  mutifolder.md  ps.md  renewprompts.md  renewrules.md  tbd.md  workbase.md  workplacestructure.md  worktree.md
bootstrap/: OPERATIONS.md  README.md  pyproject.toml
bootstrap/scripts/: run-unattended-acceptance.ps1
bootstrap/src/bootstrap/: __main__.py  cli.py  copy_trees.py  doctor.py  env_dotenv.py  install_packages.py  install_workspace_editables.py  interactive_setup.py  junction.py  materialize.py  paths.py  probe.py  routing_json.py  workspace_path.py
bootstrap/tests/: test_cli.py  test_doctor.py  test_env_dotenv.py  test_install_packages.py  test_install_workspace_editables.py  test_interactive_setup.py  test_junction.py  test_materialize.py  test_paths.py  test_probe.py  test_routing_json.py  test_workspace_path.py
dify_upload/: README.md  pyproject.toml  操作手册.md
dify_upload/src/dify_upload/: __init__.py  config.py  resolve_target.py  upload.py
dify_upload/tests/: test_config.py  test_resolve_target.py  test_upload.py
docs/superpowers/plans/: 2026-04-26-cloudflare-temp-tunnel-webhook.md  2026-04-26-dify-upload-rebuild-implementation-plan.md  (+8 more)
feishu_fetch/: README.md  pyproject.toml  人工验收操作手册.md
feishu_fetch/src/feishu_fetch/: __init__.py  config.py  errors.py  facade.py  lark_env.py  models.py
feishu_fetch/tests/: conftest.py  test_cloud_docx_integration_l1.py  test_config.py  test_facade.py  test_lark_env.py  test_models.py
feishu_fetch/tests/fixtures/: mock_lark_cli.py
old_code/: .env
old_code/dify_upload/: README.md  __init__.py  config.py  http_port.py  upload.py
old_code/feishu_fetch/: README.md
old_code/feishu_fetch/src/feishu_fetch/: __init__.py  (+5 more)
old_code/feishu_webhook/: README.md  __init__.py  crypto.py  events.py  queue_rq.py  settings.py  types.py  webhook_app.py  webhook_debounce.py  worker_tasks.py
old_code/mini_package/: NOTES.md  README.md  __init__.py  app_folder_workflow.md  client.py  config.py  example.env  feishu_create_folder.py  feishu_folder_grant_user.py  feishu_folder_tenant_share.py
old_code/old_prompts/: agent_examples.md  agent_quality.md  agent_role.md  agent_workflow.md  qa_retry_repair.md  qa_system.md
onboard/: README.md  pyproject.toml  操作手册.md
onboard/src/feishu_onboard/: env_contract.py  env_paths.py  feishu_client.py  flow.py  validate.py  verify_delegate.py
onboard/src/feishu_onboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
onboard/tests/: conftest.py  test_env_contract.py  test_env_paths_override.py  test_env_store.py  test_feishu_client.py  test_flow.py  test_lark_cli.py  test_validate.py  test_verify_delegate.py
prompts/: AGENTS.txt
prompts/rules/: 00_qa_rule_usage.mdc  sample_qa.md
test_tool/: README.md  install_cloudflared.ps1  start_temp_feishu_tunnel.ps1
test_tool/runtime/: last_tunnel_two.json
vla_env_contract/: pyproject.toml
vla_env_contract/tests/: test_env_contract.py
webhook/: README.md  pyproject.toml  操作手册.md  阶段性验收手册.md
webhook/config/: folder_routes.example.json
webhook/scripts/: _redis_cleanup_once.py  _trace_doc_redis_once.py  audit_run_stdout_vs_task_prompt.py  compare_folder_metas.py  feishu_delegate_oauth_helper.py  feishu_dotenv.py  inspect_docx.py  recover_stale_launch_run.py  stop_local_runtime.ps1  subscribe_byvwf_tds.py
webhook/src/webhook_cursor_executor/: app.py  cursor_cli.py  drive_doc_type.py  feishu_drive_subscribe.py  feishu_folder_resolve.py  feishu_resource_plane.py  ingest_kind.py  models.py  scheduler.py  settings.py  state_store.py  task_files.py  worker.py
webhook/tests/: test_app.py  test_cursor_cli.py  test_drive_doc_type.py  test_feishu_dotenv.py  test_feishu_drive_subscribe.py  test_feishu_folder_resolve.py  test_ingest_kind.py  test_models.py  test_scheduler.py  test_settings.py  test_state_store.py  test_task_files.py  test_worker_ingest.py
(+17 files in other folders)
