[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newvla-production-bootstrap"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "redis>=6.0,<7.0",
  # Resolved from repo root when: py -m pip install -e ".\bootstrap[test]" (CWD = CLONE_ROOT).
  # file:../vla_env_contract wrongly resolves ../ from CWD → parent of clone root (BUG on Windows).
  "vla-env-contract @ file:./vla_env_contract",
]
[project.scripts]
bootstrap = "bootstrap.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../vla_env_contract/src"]
testpaths = ["tests"]
