[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-upload"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28,<1.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
