[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-fetch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
