[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-onboard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<0.29",
  "vla-env-contract @ file:../vla_env_contract",
]
[project.scripts]
feishu-onboard = "feishu_onboard.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0",
  "pytest-httpx>=0.30,<0.32",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../vla_env_contract/src"]
testpaths = ["tests"]
