[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-env-contract"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../onboard/src"]
testpaths = ["tests"]
